[gd_scene load_steps=33 format=2]

[ext_resource path="res://wizard_boss.gd" type="Script" id=1]
[ext_resource path="res://dark_wizard.png" type="Texture" id=2]
[ext_resource path="res://hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Detact_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Attack_area.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.03677
height = 2.19083

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[sub_resource type="CircleShape2D" id=3]
radius = 120.0

[sub_resource type="CircleShape2D" id=4]
radius = 180.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.50013
height = 3.47625

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "rest"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 19, 18, 19, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "rest_reset"
} ]
}

[sub_resource type="Animation" id=8]
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 12, 13, 14, 15, 16, 15, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "cast_spell_c"
}, {
"args": [  ],
"method": "attack_finnisheddd"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 9, 10, 11 ]
}

[sub_resource type="Animation" id=10]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "cast_spell_f"
}, {
"args": [  ],
"method": "attack_finnisheddd"
} ]
}

[sub_resource type="Animation" id=11]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0, 3, 4, 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "rest"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "spell_c"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "spell_f"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=25]
states/Idle/node = SubResource( 12 )
states/Idle/position = Vector2( -25.4964, 60.5729 )
states/rest/node = SubResource( 13 )
states/rest/position = Vector2( 51.8367, 142.555 )
states/spell_c/node = SubResource( 14 )
states/spell_c/position = Vector2( -145.052, 143 )
states/spell_f/node = SubResource( 15 )
states/spell_f/position = Vector2( -216.163, 60.5912 )
states/walk/node = SubResource( 16 )
states/walk/position = Vector2( 157.667, 64.5473 )
transitions = [ "Idle", "walk", SubResource( 17 ), "walk", "Idle", SubResource( 18 ), "spell_f", "Idle", SubResource( 19 ), "Idle", "spell_f", SubResource( 20 ), "spell_c", "Idle", SubResource( 21 ), "Idle", "spell_c", SubResource( 22 ), "Idle", "rest", SubResource( 23 ), "rest", "Idle", SubResource( 24 ) ]
start_node = "Idle"
graph_offset = Vector2( -373.83, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[node name="wizard_boss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Attack_area1" parent="." instance=ExtResource( 6 )]
collision_mask = 2

[node name="CollisionShape2D" parent="Attack_area1" index="0"]
shape = SubResource( 2 )

[node name="Attack_area2" parent="." instance=ExtResource( 6 )]
collision_mask = 2

[node name="CollisionShape2D" parent="Attack_area2" index="0"]
scale = Vector2( 0.997386, 1 )
shape = SubResource( 3 )

[node name="Detact_player" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Detact_player" index="0"]
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
health = 10

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 25
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.629963, 3.93725 )
shape = SubResource( 5 )

[node name="AnimationWiz" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 6 )
anims/rest = SubResource( 7 )
anims/spell_c = SubResource( 8 )
anims/spell_casting = SubResource( 9 )
anims/spell_f = SubResource( 10 )
anims/walk = SubResource( 11 )

[node name="AnimationTree1" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationWiz")
parameters/playback = SubResource( 26 )

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="hurtbox"]
[editable path="Attack_area1"]
[editable path="Attack_area2"]
[editable path="Detact_player"]
